fix compiling for newer gcc

--- a/MultiNest_v3.12_CMake/multinest/src/CMakeLists.txt
+++ b/MultiNest_v3.12_CMake/multinest/src/CMakeLists.txt
@@ -35,7 +35,10 @@ foreach(lang C CXX Fortran)
     if(CMAKE_${lang}_COMPILER_ID STREQUAL GNU)
         MESSAGE(STATUS "Detected gfortran, adding -ffree-line-length-none compiler flag.")
         set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-none")
-        break()
+	 if(CMAKE_${lang}_COMPILER_VERSION VERSION_GREATER 10)
+            set(CMAKE_Fortran_FLAGS  "${CMAKE_Fortran_FLAGS} -std=legacy")
+	    endif()		 
+	break()
     endif()
 endforeach()
 
